[metadata]
name = godot_parser
version = 0.1.7
author = Steven Arcangeli
author_email = stevearc@stevearc.com
description = Python library for parsing Godot scene files
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/stevearc/godot_parser
keywords = godot parse parser scene
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.6
packages = find:
install_requires =
    pyparsing>=3

[options.package_data]
godot_parser =
    py.typed

[options.packages.find]
exclude = tests

[nosetests]
match = ^test

[wheel]

[pycodestyle]
ignore=E,W

[mypy]
ignore_missing_imports = True

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
ignore_whitespace=True
